@@ -1,12 +1,15 @@
 package com.bakdata.conquery.sql.execution;
 
 import java.sql.Connection;
+import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 import com.bakdata.conquery.models.error.ConqueryError;
 import com.bakdata.conquery.models.query.resultinfo.ResultInfo;
@@ -14,9 +17,14 @@ import com.bakdata.conquery.models.query.results.EntityResult;
 import com.bakdata.conquery.models.types.ResultType;
 import com.bakdata.conquery.sql.conquery.SqlManagedQuery;
 import com.google.common.base.Stopwatch;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.jooq.DSLContext;
+import org.jooq.Record;
+import org.jooq.Result;
+import org.jooq.Select;
+import org.jooq.exception.DataAccessException;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -25,7 +33,9 @@ public class SqlExecutionService {
 	private static final int PID_COLUMN_INDEX = 1;
 	private static final int VALUES_OFFSET_INDEX = 2;
 
+	@Getter
 	private final DSLContext dslContext;
+
 	private final ResultSetProcessor resultSetProcessor;
 
 	public SqlExecutionResult execute(SqlManagedQuery sqlQuery) {
@@ -36,12 +46,42 @@ public class SqlExecutionService {
 		return result;
 	}
 
+	public Result<?> fetch(Select<?> query) {
+		log.debug("Executing query: \n{}", query);
+		try {
+			return dslContext.fetch(query);
+		}
+		catch (DataAccessException exception) {
+			throw new ConqueryError.SqlError(exception);
+		}
+	}
+
+	/**
+	 * Executes the query and returns the results as a Stream.
+	 * <p>
+	 * Note: The returned Stream is resourceful. It must be closed by the caller, because it contains a reference to an open {@link ResultSet}
+	 * and {@link PreparedStatement}.
+	 *
+	 * @param query The query to be executed.
+	 * @return A Stream of query results.
+	 */
+	public <R extends Record> Stream<R> fetchStream(Select<R> query) {
+		log.debug("Executing query: \n{}", query);
+		try {
+			return dslContext.fetchStream(query);
+		}
+		catch (DataAccessException exception) {
+			throw new ConqueryError.SqlError(exception);
+		}
+	}
+
 	private SqlExecutionResult createStatementAndExecute(SqlManagedQuery sqlQuery, Connection connection) {
 
 		String sqlString = sqlQuery.getSqlQuery().getSql();
-		List<ResultType> resultTypes = sqlQuery.getSqlQuery().getResultInfos().stream().map(ResultInfo::getType).toList();
+		List<ResultType<?>> resultTypes = sqlQuery.getSqlQuery().getResultInfos().stream().map(ResultInfo::getType).collect(Collectors.toList());
 
-		log.debug("Executing query: \n{}", sqlString);
+		log.info("Executing query: \n{}", sqlString);
+
 		try (Statement statement = connection.createStatement();
 			 ResultSet resultSet = statement.executeQuery(sqlString)) {
 			int columnCount = resultSet.getMetaData().getColumnCount();
@@ -50,20 +90,16 @@ public class SqlExecutionService {
 
 			return new SqlExecutionResult(columnNames, resultTable);
 		}
-		catch (SQLException e) {
-			throw new ConqueryError.SqlError(e);
-		}
 		// not all DB vendors throw SQLExceptions
-		catch (RuntimeException e) {
-			throw new ConqueryError.SqlError(new SQLException(e));
+		catch (SQLException | RuntimeException e) {
+			throw new ConqueryError.SqlError(e);
 		}
 	}
 
-	private List<EntityResult> createResultTable(ResultSet resultSet, List<ResultType> resultTypes, int columnCount) throws SQLException {
+	private List<EntityResult> createResultTable(ResultSet resultSet, List<ResultType<?>> resultTypes, int columnCount) throws SQLException {
 		List<EntityResult> resultTable = new ArrayList<>(resultSet.getFetchSize());
-		ResultSetProcessor.ResultSetMapper[] mappers = ResultSetProcessor.getMappers(resultTypes);
 		while (resultSet.next()) {
-			SqlEntityResult resultRow = getResultRow(resultSet, mappers, columnCount);
+			SqlEntityResult resultRow = getResultRow(resultSet, resultTypes, columnCount);
 			resultTable.add(resultRow);
 		}
 		return resultTable;
@@ -85,7 +121,7 @@ public class SqlExecutionService {
 		}
 	}
 
-	private SqlEntityResult getResultRow(ResultSet resultSet, ResultSetProcessor.ResultSetMapper[] mappers, int columnCount) throws SQLException {
+	private SqlEntityResult getResultRow(ResultSet resultSet, List<ResultType<?>> resultTypes, int columnCount) throws SQLException {
 
 		int rowNumber = resultSet.getRow();
 		String id = resultSet.getString(PID_COLUMN_INDEX);
@@ -93,7 +129,7 @@ public class SqlExecutionService {
 
 		for (int resultSetIndex = VALUES_OFFSET_INDEX; resultSetIndex <= columnCount; resultSetIndex++) {
 			int resultTypeIndex = resultSetIndex - VALUES_OFFSET_INDEX;
-			resultRow[resultTypeIndex] = mappers[resultTypeIndex].getFromResultSet(resultSet, resultSetIndex, this.resultSetProcessor);
+			resultRow[resultTypeIndex] = resultTypes.get(resultTypeIndex).getFromResultSet(resultSet, resultSetIndex, this.resultSetProcessor);
 		}
 
 		return new SqlEntityResult(rowNumber, id, resultRow);
